--- a/Analysis/OMV-analysis.Rmd
+++ b/Analysis/OMV-analysis.Rmd
@@ -45,14 +45,24 @@ ggplot(data=vesiculation) +
   ylim(-1,8)+
   labs(y="Average OMV Production Change (Folds)")+
   geom_point(size=0.24)+
-  geom_hline(yintercept=1, color="blue", linetype="solid", size=1.15)+
+  geom_hline(yintercept=1, color="blue", linetype="solid", size=1)+
+  geom_hline(yintercept=1.091811, color="orange",linetype="dashed", size=0.7)
   labs(title = "Average impact on OMV production (Antilogged, Linear)")
 ```
 Figure1: This scatterplot shows the OMV production change in antilog, linear. Each dot represents an individual sample.A few outliers above 8 folds are ignored. The blue solid has a y-intercept of 1, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production.
 
 
-
-
+#Let's make another figure with same data, but in log10 scale.
+```{r data}
+ggplot(data=vesiculation) +
+  aes(x=bID) + 
+  labs(x= "E.coli K12 unique identifier") +
+  aes(y=average.log.OMV) +
+  labs(y="Average OMV Production Change (log10 of Folds)")+
+  geom_point(size=0.3)+
+  labs(title = "Average impact on OMV production (Log10)")
+```
+Figure2:
 
 
 
