--- a/Analysis/OMV-analysis.Rmd
+++ b/Analysis/OMV-analysis.Rmd
@@ -44,7 +44,7 @@ ggplot(data=vesiculation) +
   aes(y=average.antilog.omv) +
   ylim(-1,8)+
   labs(y="Average OMV Production Change (Folds)")+
-  geom_point(size=0.24)+
+  geom_point(size=0.20,alpha=0.6)+
   geom_hline(yintercept=1, color="blue", linetype="solid", size=1)+
   geom_hline(yintercept=1.091811, color="orange",linetype="dashed", size=0.7)
   labs(title = "Average impact on OMV production (Antilogged, Linear)")
@@ -59,10 +59,16 @@ ggplot(data=vesiculation) +
   labs(x= "E.coli K12 unique identifier") +
   aes(y=average.log.OMV) +
   labs(y="Average OMV Production Change (log10 of Folds)")+
-  geom_point(size=0.3)+
+  geom_point(size=0.25, alpha=0.6)+
+  geom_hline(yintercept=0, color="blue", linetype="solid", size=1)+
+  geom_hline(yintercept=-0.02552768, color="orange",linetype="dashed", size=0.7)
   labs(title = "Average impact on OMV production (Log10)")
 ```
-Figure2:
+Figure2:This scatterplot shows the OMV production change in log10. Each dot represents an individual sample.The blue solid has a y-intercept of 0, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production.
+
+
+
+
 
 
 
