--- a/Analysis/OMV-analysis.Rmd
+++ b/Analysis/OMV-analysis.Rmd
@@ -36,12 +36,10 @@ summarize(vesiculation,
           maximumLogOMV=max(average.log.OMV),
           medianLogOMV=median(average.log.OMV),
           
-          
           averageAntilogOMV=mean(average.antilog.omv),
           minimumAntilogOMV=min(average.antilog.omv),
           maximumAntilogOMV=max(average.antilog.omv),
           medianAntilogOMV=median(average.antilog.omv),
-          
           
           averageSTDEVAntilog=mean(stdev.antilog))
 ```
@@ -79,8 +77,18 @@ Figure2:This scatterplot shows the OMV production change in log10. Each dot repr
 
 #Make a histogram showing the frequency.
 
+```{r data}
+ggplot(data=vesiculation) +
+  aes(x=average.log.OMV) +
+  labs(x="Change on OMV production, log10") +
+  aes(y=..count..) +
+  labs(y="Frequency") +
+  scale_y_continuous(breaks = seq(0, 140, by = 20))+
+  geom_histogram(binwidth=0.01) +
+  labs(title="Distribution of OMV production in log10")
 
-
+```
+Figure3:Histogram.
 
 
 
