--- a/Analysis/OMV-analysis.Rmd
+++ b/Analysis/OMV-analysis.Rmd
@@ -42,11 +42,12 @@ summarize(vesiculation,
           minimumAntilogOMV=min(average.antilog.omv),
           maximumAntilogOMV=max(average.antilog.omv),
           medianAntilogOMV=median(average.antilog.omv),
-          
           averageSTDEVAntilog=mean(stdev.antilog))
+#Standard Deviation of antilog:directly caluculated from the csv file, they have removed some outliers already.
+
 ```
 
-#Then make scatterplot to show the distribution of OMV production change (linear) for all samples, with a few outliers removed.
+#Then make scatterplot to show the distribution of OMV production change (Antilogged) for all samples, with a few outliers removed.
 ```{r figure1}
 ggplot(data=vesiculation) +
   aes(x=bID) + 
@@ -59,7 +60,7 @@ ggplot(data=vesiculation) +
   geom_hline(yintercept=1.091811, color="orange",linetype="dashed", size=0.7)
   labs(title = "Average impact on OMV production (Antilogged, Linear)")
 ```
-Figure1: This scatterplot shows the OMV production change in antilog, linear. Each dot represents an individual sample.A few outliers above 8 folds are ignored. The blue solid has a y-intercept of 1, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production.
+Figure1: This scatterplot shows the OMV production change in antilog. Each dot represents an individual sample.A few outliers above 8 folds are ignored. The blue solid has a y-intercept of 1, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production.
 
 
 #Let's make another figure with same data, but in log10 scale.
@@ -74,7 +75,13 @@ ggplot(data=vesiculation) +
   geom_hline(yintercept=-0.02552768, color="orange",linetype="dashed", size=0.7)+
   labs(title = "Average impact on OMV production (Log10)")
 ```
-Figure2:This scatterplot shows the OMV production change in log10. Each dot represents an individual sample.The blue solid has a y-intercept of 0, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production level.
+Figure2a:This scatterplot shows the OMV production change in log10. Each dot represents an individual sample.The blue solid has a y-intercept of 0, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production level.
+
+
+
+
+
+
 
 
 #Make a histogram showing the frequency.
