--- a/Analysis/OMV-analysis.Rmd
+++ b/Analysis/OMV-analysis.Rmd
@@ -3,8 +3,9 @@ title: "BIOMI6300_Project1:OMV_Analysis"
 author: "Jiucheng Ding"
 date: "`r Sys.Date()`"
 output:
-  html_document: default
-  pdf_document: default
+  html_document: 
+    bibliography: 10.1371%2Fjournal.pone.0139200.bib
+    csl: apa-single-spaced.csl
 ---
 
 #File setup:
@@ -47,6 +48,9 @@ summarize(vesiculation,
 
 ```
 
+
+
+
 #Then make scatterplot to show the distribution of OMV production change (Antilogged) for all samples, with a few outliers removed.
 ```{r figure1}
 ggplot(data=vesiculation) +
@@ -63,6 +67,13 @@ ggplot(data=vesiculation) +
 Figure1: This scatterplot shows the OMV production change in antilog. Each dot represents an individual sample.A few outliers above 8 folds are ignored. The blue solid has a y-intercept of 1, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production.
 
 
+
+
+
+
+
+
+
 #Let's make another figure with same data, but in log10 scale.
 ```{r figure2}
 ggplot(data=vesiculation) +
@@ -75,7 +86,8 @@ ggplot(data=vesiculation) +
   geom_hline(yintercept=-0.02552768, color="orange",linetype="dashed", size=0.7)+
   labs(title = "Average impact on OMV production (Log10)")
 ```
-Figure2a:This scatterplot shows the OMV production change in log10. Each dot represents an individual sample.The blue solid has a y-intercept of 0, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production level.
+Figure2:This scatterplot shows the OMV production change in log10. Each dot represents an individual sample.The blue solid has a y-intercept of 0, indicating that the values above this line have an increased OMV production; those below represent those with lowered OMV production level.
+
 
 
 
@@ -102,6 +114,7 @@ Figure3:Histogram for the distribution of change on OMV production relative to t
 
 
 
+# References
 
 
 #To determine the session info:
