--- a/Analysis/OMV-analysis.Rmd
+++ b/Analysis/OMV-analysis.Rmd
@@ -4,7 +4,7 @@ author: "Jiucheng Ding"
 date: "`r Sys.Date()`"
 output:
   html_document: 
-    bibliography: 10.1371%2Fjournal.pone.0139200.bib
+    bibliography: Kulp_et_al.bib
     csl: apa-single-spaced.csl
 ---
 
@@ -45,9 +45,7 @@ summarize(vesiculation,
           medianAntilogOMV=median(average.antilog.omv),
           averageSTDEVAntilog=mean(stdev.antilog))
 #Standard Deviation of antilog:directly caluculated from the csv file, they have removed some outliers already.
-
 ```
-
 
 
 
@@ -115,10 +113,12 @@ Figure3:Histogram for the distribution of change on OMV production relative to t
 
 
 # References
-
-
+```{r references}
+<div id="refs"></div>
+```
 #To determine the session info:
+```{r devtools}
 install.packages("devtools")
 library(devtools)
 session_info()
-
+```
