--- a/Analysis/OMV-analysis.Rmd
+++ b/Analysis/OMV-analysis.Rmd
@@ -4,10 +4,9 @@ author: "Jiucheng Ding"
 date: "`r Sys.Date()`"
 output:
   html_document: 
-    bibliography: Kulp_et_al.bib
-    csl: apa-single-spaced.csl
-    nocite: |
-      @*
+    bibliography: "~/Desktop/Project1/Kulp2015.bibtex"
+    csl: "~/Desktop/Project1/Analysis/apa-single-spaced.csl"
+#Tried hours and failed to add the reference. May ask the professor during office hour or sometime else. 
 ---
 
 #File setup:
@@ -112,19 +111,14 @@ Figure3: Histogram for the distribution of change on OMV production relative to 
 
 
 
+#Adding text discussion and conclusion:
 
 Discussion and conclusion:
+  According to figure 1 and 2, most of the dots are around the central line with not much change in OMV production. In figure 3, the distribution appears to be normally speard with mean value and the zero value very close to each other. However, this cannot lead to a conclusion that there is no effect on OMV production by gene-knocking out: there is a wide spectrum of genes knocked, it is obvious that the truncation on some of them lead to overvesiculation while others lead to decreased level. One of the explanation for the distribution is that the combination of all these genetic factors and mechanisms compromise with each other, and thus neutralize the overall average value close to the "no change" value. More information about the specfic genes subjected to treatment is required for a deeper understanding of the study.
 
 
 
 
-
-
-
-# References
-```{r references}
-<div id="refs"> </div>
-```
 #To determine the session info:
 ```{r devtools}
 install.packages("devtools")
